--- a/task.html
+++ b/task.html
@@ -17,63 +17,63 @@
                 <form>
                     <div class="mb-3">
                         <label for="firstName" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="firstName" placeholder="Enter your first name">
+                        <input required name="firstname" type="text" class="form-control" id="firstName" placeholder="Enter your first name">
                     </div>
                     <div class="mb-3">
                         <label for="lastName" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" id="lastName" placeholder="Enter your last name">
+                        <input required name ="lastname" type="text" class="form-control" id="lastName" placeholder="Enter your last name">
                     </div>
                     <div class="mb-3">
                         <label for="dob" class="form-label">Date of Birth</label>
-                        <input type="date" class="form-control" id="dob">
+                        <input required name = "dob" type="date" class="form-control" id="dob">
                     </div>
                     <div class="mb-3">
                         <label for="place" class="form-label">Place</label>
-                        <input type="text" class="form-control" id="place" placeholder="Enter your place">
+                        <input required name = "place" type="text" class="form-control" id="place" placeholder="Enter your place">
                     </div>
                     <div class="mb-3">
                         <label for="currency" class="form-label">Currency</label>
-                        <select class="form-select" id="currency">
-                            <option selected>Select Currency</option>
+                        <select required name="currency" class="form-select" id="currency">
+                            <!-- <option selected>Select Currency</option>
                             <option value="usd">USD</option>
                             <option value="eur">EUR</option>
-                            <option value="inr">INR</option>
+                            <option value="inr">INR</option> -->
                         </select>
                     </div>
                     <div class="mb-3">
                         <label for="amount" class="form-label">Amount</label>
-                        <input type="number" class="form-control" id="amount" placeholder="Enter amount">
+                        <input required name ="amount" type="number" class="form-control" id="amount" placeholder="Enter amount">
                     </div>
                     <div class="mb-3">
                         <label for="paymentMode" class="form-label">Payment Mode</label>
-                        <select class="form-select" id="paymentMode">
-                            <option selected>Select Payment Mode</option>
+                        <select required name="paymentmode" class="form-select" id="paymentMode">
+                            <!-- <option selected>Select Payment Mode</option>
                             <option value="credit">Credit</option>
                             <option value="debit">Debit</option>
-                            <option value="cash">Cash</option>
+                            <option value="cash">Cash</option> -->
                         </select>
                     </div>
                     <div class="mb-3">
                         <label for="rateOfInterest" class="form-label">Rate of Interest</label>
-                        <select class="form-select" id="rateOfInterest">
-                            <option selected>Select Rate</option>
+                        <select required name="roi" class="form-select" id="rateOfInterest">
+                            <!-- <option selected>Select Rate</option>
                             <option value="5%">5%</option>
                             <option value="10%">10%</option>
-                            <option value="15%">15%</option>
+                            <option value="15%">15%</option> -->
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label for="timeDuration" class="form-label">Time Duration</label>
-                        <select class="form-select" id="timeDuration">
-                            <option selected>Select Duration</option>
+                        <label for="EMI" class="form-label">EMI</label>
+                        <select required name="emi" class="form-select" id="emi">
+                            <!-- <option selected>Select Duration</option>
                             <option value="6m">6 Months</option>
                             <option value="1y">1 Year</option>
-                            <option value="2y">2 Years</option>
+                            <option value="2y">2 Years</option> -->
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label for="emi" class="form-label">EMI</label>
-                        <input type="number" class="form-control" id="emi" placeholder="Enter EMI">
+                        <label for="year" class="form-label">YEAR</label>
+                        <input name="year" type="number" class="form-control" id="Year" placeholder="Enter Duration(Years)">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
@@ -84,13 +84,16 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Result</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">
+
+                        </p>
                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src = "task.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
